--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#c38d73">
     <title>Netinn | Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
@@ -12,7 +13,14 @@
 </head>
 
 <body>
-    <!--HEADER-->
+    <!--Loader-->
+    <div class="loader">
+        <div class="loader__inner">
+            <p class="loader--text">NET <br> INN</p>
+        </div>
+    </div>
+
+    <!--Header-->
     <header class="header">
         <div class="wrapper">
             <div class="logo"><a href="index.html">netinn</a></div>
@@ -36,20 +44,15 @@
     </section>
 
     <!--what we do-->
-    <section class="what-we-do">
+    <section class="what-we-do white-section">
         <div class="wrapper">
             <h3 class="subtitle subtitle--dark">what we do</h3>
-            <p class="text text--dark mp-24">We're the experts in <a class="link" href="#" target="_blank">WordPress</a>
-                and <a class="link" href="#" target="_blank">Shopify</a> with a focus on
-                design first. Creating industry
-                leading <a class="link" href="#" target="_blank">brands</a> and best in
-                class <a href="#" class="link" target="_blank">websites</a>. It's what make
-                us different.</p>
+            <p class="text text--dark mp-24">We're the experts in <a class="link" href="#" target="_blank">WordPress</a> and <a class="link" href="#" target="_blank">Shopify</a> with a focus on design first. Creating industry leading <a class="link" href="#" target="_blank">brands</a> and best in class <a href="#" class="link" target="_blank">websites</a>. It's what make us different.</p>
         </div>
     </section>
 
     <!--featured work-->
-    <section class="featured-work">
+    <section class="featured-work white-section">
         <div class="wrapper">
             <h2 class="secondary-title secondary-title--dark">featured work</h2>
 
@@ -58,7 +61,7 @@
                     <h6 class="small-heading small-heading--white">websites</h6>
                     <h5 class="title-quinary title-quinary--white">new legend <span>4x4</span></h5>
                 </a>
-                <a href="#" class="grid__item">
+                <a href="#" class="grid__item paddle-wake">
                     <h6 class="small-heading small-heading--white">shops</h6>
                     <h5 class="title-quinary title-quinary--white">paddle &plus; wake</h5>
                 </a>
@@ -69,25 +72,19 @@
     </section>
 
     <!--home services-->
-    <section class="home-services">
+    <section class="home-services dark-section">
         <div class="wrapper">
             <h3 class="subtitle subtitle--white">est&#46; 2008</h3>
 
             <div class="home-services__content mp-24">
                 <h2 class="secondary-title secondary-title--white">be brawe</h2>
-                <p class="text text--white">Looking for a bold new brand or an
-                    award-winning website? Together
-                    we'll make it happen.</p>
+                <p class="text text--white">Looking for a bold new brand or an award-winning website? Together we'll make it happen.</p>
 
                 <ul class="services-list">
-                    <li><a class="services-links" href="#">Logos &plus; Branding <div class="img-container"><img
-                                    src="images/svg/arrow.svg" alt=""></div></a></li>
-                    <li><a class="services-links" href="#">Website Design <div class="img-container"><img
-                                    src="images/svg/arrow.svg" alt=""></div></a></li>
-                    <li><a class="services-links" href="#">WordPress Development <div class="img-container"><img
-                                    src="images/svg/arrow.svg" alt=""></div></a></li>
-                    <li><a class="services-links" href="#">Shopify Stores <div class="img-container"><img
-                                    src="images/svg/arrow.svg" alt=""></div></a></li>
+                    <li><a class="services-links" href="#">Logos &plus; Branding <div class="img-container"><img src="images/svg/arrow.svg" alt=""></div></a></li>
+                    <li><a class="services-links" href="#">Website Design <div class="img-container"><img src="images/svg/arrow.svg" alt=""></div></a></li>
+                    <li><a class="services-links" href="#">WordPress Development <div class="img-container"><img src="images/svg/arrow.svg" alt=""></div></a></li>
+                    <li><a class="services-links" href="#">Shopify Stores <div class="img-container"><img src="images/svg/arrow.svg" alt=""></div></a></li>
                 </ul>
 
                 <a class="btn" href="#">all services</a>
@@ -96,7 +93,7 @@
     </section>
 
     <!--our heroes-->
-    <section class="our-heroes">
+    <section class="our-heroes dark-section">
         <div class="wrapper">
             <h2 class="large-heading">our <br> heroes</h2>
         </div>
@@ -104,44 +101,37 @@
     </section>
 
     <!--our folk-->
-    <section class="our-folk">
+    <section class="our-folk white-section">
         <div class="wrapper">
             <h3 class="subtitle subtitle--white">what we do</h3>
-            <p class="text text--white mp-34" style="color: #fff; line-height: 1.6; font-weight: 500;">We're lucky to
-                have a team of
-                people that not only know their
-                stuff but care about being that bit
-                better, creating work that's far from
-                average, for brands that share one
-                thing in common - to become kings
-                of their craft.</p>
+            <p class="text text--white mp-34">We're lucky tohave a team of people that not only know their stuff but care about being that bit better, creating work that's far from average, for brands that share one thing in common - to become kings of their craft.</p>
         </div>
     </section>
 
     <!--met us-->
-    <section class="met-us">
+    <section class="met-us white-section">
         <div class="wrapper">
             <div class="cta">meet us</div>
         </div>
     </section>
 
     <!--testimonials-->
-    <section class="testimonials">
+    <section class="testimonials white-section">
         <div class="testimonials__top">
             <div class="wrapper testimonial-slider">
-                <div class="testimonials__item active">
+                <div class="testimonials__top__item active">
                     <img src="images/svg/rlyl.svg" alt="red lorry yellow lorry">
                 </div>
-                <div class="testimonials__item">
+                <div class="testimonials__top__item">
                     <img src="images/svg/fumo.svg" alt="fumo">
                 </div>
-                <div class="testimonials__item">
+                <div class="testimonials__top__item">
                     <img src="images/svg/new-legend.svg" alt="new legend">
                 </div>
-                <div class="testimonials__item">
+                <div class="testimonials__top__item">
                     <img src="images/svg/ford-broncos.svg" alt="ford broncos">
                 </div>
-                <div class="testimonials__item">
+                <div class="testimonials__top__item">
                     <img src="images/svg/paper-cast.svg" alt="paper cast">
                 </div>
             </div>
@@ -191,14 +181,18 @@
     </section>
 
     <!--start a project-->
-    <section class="start-a-project">
-        <div class="wrapper"><a href="#"><span>Start a project</span>
-                <div class="img-container"><img src="images/svg/arrow.svg" alt=""></div>
-            </a></div>
+    <section class="start-a-project white-section">
+        <div class="wrapper">
+            <a href="#">
+                <span>Start a project</span>
+                <div class="img-container">
+                    <img src="images/svg/arrow.svg" alt="">
+                </div></a>
+        </div>
     </section>
 
     <!--footer-->
-    <footer class="footer">
+    <footer class="footer white-section">
         <div class="footer__item footer__item--1">
             <div class="wrapper">
                 <h2 class="secondary-title secondary-title--dark">out of hours</h2>
@@ -234,9 +228,9 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Carrers</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
                 </ul>
             </div>
 
@@ -269,13 +263,12 @@
 
     <script>
 
-        if (window.matchMedia("(max-width: 768px)").matches) {
-            /* the viewport is less than 768 pixels wide */
+        if (window.matchMedia("(max-width: 670px)").matches) {
             $('.testimonial-slider').slick({
                 infinite: true,
                 slidesToShow: 3,
                 slidesToScroll: 1,
-                arrows: false
+                arrows: false,
             });
         }
 
