--- a/projects.html
+++ b/projects.html
@@ -205,11 +205,11 @@
             <div class="nav__top">
                 <ul class="nav__item nav__item--1">
                     <li><a href="about.html">About</a></li>
-                    <li><a class="link--active" href="#">Projects</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Carrers</a></li>
+                    <li><a class="link--active" href="projects.html">Projects</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="careers.html">Carrers</a></li>
                 </ul>
             </div>
 
