finished home animations

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
 
     <!--what we do-->
-    <section class="what-we-do white-section">
+    <section class="what-we-do" id="whatWeDo">
         <div class="wrapper">
             <h3 class="subtitle subtitle--dark">what we do</h3>
             <p class="text text--dark mp-24">We're the experts in <a class="link" href="#" target="_blank">WordPress</a> and <a class="link" href="#" target="_blank">Shopify</a> with a focus on design first. Creating industry leading <a class="link" href="#" target="_blank">brands</a> and best in class <a href="#" class="link" target="_blank">websites</a>. It's what make us different.</p>
@@ -52,7 +52,7 @@
     </section>
 
     <!--featured work-->
-    <section class="featured-work white-section">
+    <section class="featured-work">
         <div class="wrapper">
             <h2 class="secondary-title secondary-title--dark">featured work</h2>
 
@@ -72,7 +72,7 @@
     </section>
 
     <!--home services-->
-    <section class="home-services dark-section">
+    <section class="home-services">
         <div class="wrapper">
             <h3 class="subtitle subtitle--white">est&#46; 2008</h3>
 
